--- a/demo/index.html
+++ b/demo/index.html
@@ -21,10 +21,10 @@
     <!-- 公共函数 -->
 
     <!-- 扩展EasyUI -->
-    <script type="text/javascript" src="topjui/js/config.js"></script>
-    <script type="text/javascript" src="topjui/js/topjui.js"></script>
+    <script type="text/javascript" src="topjui/js/topjui.config.js"></script>
+    <script type="text/javascript" src="topjui/js/topjui.all.js"></script>
     <!-- 首页js -->
-    <script type="text/javascript" src="topjui/js/index.js" charset="utf-8"></script>
+    <script type="text/javascript" src="topjui/js/topjui.index.js" charset="utf-8"></script>
 
     <script type="text/javascript">
         $(window).load(function () {
