--- a/demo/html/article/index.html
+++ b/demo/html/article/index.html
@@ -125,7 +125,7 @@
        },
        dialog:{
            id:'articleAddDialog',
-           href:ctx + '/system/article/add',
+           href:'/html/article/add.html',
            width:900,
 	  	   height:500,
 	  	   maximizable:false,
