--- a/demo/html/article/index.html
+++ b/demo/html/article/index.html
@@ -13,11 +13,11 @@
     <!-- 自定义样式 -->
     <link type="text/css" rel="stylesheet" href="/topjui/css/style.css">
     <!-- 引入jQuery -->
-    <script type="text/javascript" src="/topjui/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/jquery.cookie.js"></script>
+    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- EasyUI核心 -->
-    <script type="text/javascript" src="/topjui/js/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="/topjui/js/easyui-lang-zh_CN.js"></script>
+    <script type="text/javascript" src="/topjui/plugins/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="/topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- 公共函数 -->
 
     <!-- 扩展EasyUI -->
