--- a/demo/html/article/index.html
+++ b/demo/html/article/index.html
@@ -4,24 +4,8 @@
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
-    <!-- 浏览器标签图片 -->
-    <link rel="shortcut icon" href="/topjui/image/favicon.ico"/>
-    <!-- EasyUI样式 -->
-    <link type="text/css" rel="stylesheet" id="easyuiTheme" href="/topjui/themes/default/easyui.css">
-    <!-- 小图标样式 -->
-    <link type="text/css" rel="stylesheet" href="/topjui/css/icon.css">
-    <!-- 自定义样式 -->
-    <link type="text/css" rel="stylesheet" href="/topjui/css/style.css">
-
-    <!-- 引入jQuery -->
-    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.cookie.js"></script>
-    <!-- EasyUI核心 -->
-    <script type="text/javascript" src="/topjui/plugins/easyui/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
-    <!-- TopJUI框架 -->
-    <script type="text/javascript" src="/topjui/js/topjui.config.js"></script>
-    <script type="text/javascript" src="/topjui/js/topjui.all.js"></script>
+    <!-- 公共css/js文件 -->
+    <script type="text/javascript" src="/topjui/js/topjui.include.js"></script>
 </head>
 
 <body>
