--- a/demo/index.html
+++ b/demo/index.html
@@ -13,14 +13,15 @@
     <!-- 自定义样式 -->
     <link type="text/css" rel="stylesheet" href="/topjui/css/style.css">
 
-    <!-- 引入jQuery -->
+    <!-- TopJUI配置 -->
+    <script type="text/javascript" src="/topjui/js/topjui.config.js"></script>
+    <!-- jQuery核心 -->
     <script type="text/javascript" src="/topjui/plugins/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- EasyUI核心 -->
     <script type="text/javascript" src="/topjui/plugins/easyui/jquery.easyui.min.js"></script>
     <script type="text/javascript" src="/topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- TopJUI框架 -->
-    <script type="text/javascript" src="/topjui/js/topjui.config.js"></script>
     <script type="text/javascript" src="/topjui/js/topjui.all.js"></script>
     <!-- 首页js -->
     <script type="text/javascript" src="/topjui/js/topjui.index.js" charset="utf-8"></script>
