--- a/demo/index.html
+++ b/demo/index.html
@@ -8,10 +8,8 @@
     <link rel="shortcut icon" href="/topjui/image/favicon.ico"/>
     <!-- EasyUI样式 -->
     <link type="text/css" rel="stylesheet" id="easyuiTheme" href="/topjui/themes/default/easyui.css">
-    <!-- 小图标样式 -->
-    <link type="text/css" rel="stylesheet" href="/topjui/css/icon.css">
-    <!-- 自定义样式 -->
-    <link type="text/css" rel="stylesheet" href="/topjui/css/style.css">
+    <!-- TopJUI样式 -->
+    <link type="text/css" rel="stylesheet" href="/topjui/css/topjui.min.css">
 
     <!-- TopJUI配置 -->
     <script type="text/javascript" src="/topjui/js/topjui.config.js"></script>
@@ -22,7 +20,7 @@
     <script type="text/javascript" src="/topjui/plugins/easyui/jquery.easyui.min.js"></script>
     <script type="text/javascript" src="/topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- TopJUI框架 -->
-    <script type="text/javascript" src="/topjui/js/topjui.all.js"></script>
+    <script type="text/javascript" src="/topjui/js/topjui.all.min.js"></script>
     <!-- 首页js -->
     <script type="text/javascript" src="/topjui/js/topjui.index.js" charset="utf-8"></script>
 
