--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
     <!-- EasyUI样式 -->
     <link type="text/css" rel="stylesheet" id="easyuiTheme" href="/topjui/themes/default/easyui.css">
     <!-- TopJUI样式 -->
-    <link type="text/css" rel="stylesheet" href="/topjui/css/topjui.min.css">
+    <link type="text/css" rel="stylesheet" href="/topjui/css/topjui.all.min.css">
 
     <!-- TopJUI配置 -->
     <script type="text/javascript" src="/topjui/js/topjui.config.js"></script>
