--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="/topjui/plugins/easyui/jquery.easyui.min.js"></script>
     <script type="text/javascript" src="/topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- TopJUI框架 -->
-    <script type="text/javascript" src="/topjui/js/topjui.all.min.js"></script>
+    <script type="text/javascript" src="/topjui/js/topjui.all.js"></script>
     <!-- 首页js -->
     <script type="text/javascript" src="/topjui/js/topjui.index.js" charset="utf-8"></script>
 
