--- a/demo/html/article/index.html
+++ b/demo/html/article/index.html
@@ -41,7 +41,7 @@
 				 ]">
             <div title="文章详情"
                  data-options="id:'detail1Panel',iconCls:'icon-table',
-					 dynamicHref:ctx + '/system/article/detail?uuid={uuid}',
+					 dynamicHref:ctx + '/system/api/articleDetail?uuid={uuid}',
 							parentGrid:{
 								type:'datagrid',
 								id:'articleDg',
@@ -49,7 +49,7 @@
 							}"></div>
             <div title="打印页面"
                  data-options="id:'detail2Panel',iconCls:'icon-table',
-					 dynamicHref:ctx + '/system/article/print?uuid={uuid}',
+					 dynamicHref:ctx + '/system/api/articlePrint?uuid={uuid}',
 							parentGrid:{
 								type:'datagrid',
 								id:'articleDg',
