--- a/demo/html/article/index.html
+++ b/demo/html/article/index.html
@@ -39,7 +39,7 @@
 				 	{type:'panel',id:'detail1Panel'},
 				 	{type:'panel',id:'detail2Panel'}
 				 ]">
-            <div title="文章详情"
+            <div title="第一个tab页（动态加载内容）"
                  data-options="id:'detail1Panel',iconCls:'icon-table',
 					 dynamicHref:ctx + '/system/api/articleDetail?uuid={uuid}',
 							parentGrid:{
@@ -47,7 +47,7 @@
 								id:'articleDg',
 								params:'uuid'
 							}"></div>
-            <div title="打印页面"
+            <div title="第二个tab页（动态加载内容）"
                  data-options="id:'detail2Panel',iconCls:'icon-table',
 					 dynamicHref:ctx + '/system/api/articlePrint?uuid={uuid}',
 							parentGrid:{
