--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -64,7 +64,7 @@
                     <div class="list-group-item">
                         <span class="text-success">
                             <i class="fa fa-info-circle"></i>
-                            表格组件：普通表格、树形表格、可编辑表格
+                            表格组件：普通表格、树形表格、可编辑表格（双击行编辑）
                         </span>
                     </div>
                 </div>
