--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -16,10 +16,10 @@
 <div class="container-fluid">
     <p></p>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h3 class="panel-title text-center">TopJUI前端框架演示说明</h3>
+                    <h3 class="text-center">TopJUI前端框架</h3>
                 </div>
                 <div class="list-group">
                     <div class="list-group-item">
@@ -41,14 +41,6 @@
                         </span>
                     </div>
                     <div class="list-group-item">
-                        <span>
-                            <i class="fa fa-info-circle"></i>
-                            更多功能及使用文档详见TopJUI前端框架与JAVA SSH整合的实战项目：
-                            <a href="http://demo.topjui.com/system/index/index" target="_blank">http://demo.topjui.com/system/index/index</a>
-                            ，用户名/密码：topjui / topjui
-                        </span>
-                    </div>
-                    <div class="list-group-item">
                         <span class="text-danger">
                             <i class="fa fa-info-circle"></i>
                             由于时间关系，目前本演示系统功能还不完全，后续会一步步完善，请关注GIT更新：
@@ -67,6 +59,49 @@
                             表格组件：普通表格、树形表格、可编辑表格（双击行编辑）
                         </span>
                     </div>
+                    <div class="list-group-item">
+                        <span>
+                            <i class="fa fa-info-circle"></i>
+                            更多功能及使用文档详见TopJUI前端框架与JAVA（Spring + Spring MVC + Hibernate）整合的项目：
+                            <a href="http://demo.topjui.com/system/index/index" target="_blank">http://demo.topjui.com/system/index/index</a>
+                            ，用户名/密码：topjui / topjui
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="text-center">企业级信息管理系统开发平台</h3>
+                </div>
+                <div class="list-group-item">
+                    <span>
+                        系统访问地址：
+                        <a href="http://demo.topjui.com/system/index/index" target="_blank">http://demo.topjui.com/system/index/index</a>
+                            ，用户名/密码：topjui / topjui
+                    </span>
+                </div>
+                <div class="panel-body">
+                    <h3><i class="fa fa-info-circle"></i> 与TopJUI整合实现的功能</h3>
+                    <p>
+                        根据TopJUI前端框架的一些特性，通过与JAVA后端（Spring + Spring MVC + Hibernate）整合，实现的部分功能如下：
+                    </p>
+                    <p>多数据源连接：实现数据库分布式部署或集成已有信息系统的数据，实现系统整合</p>
+                    <p>HQL查询：可通过HQL（Hibernate查询）实现查询或新增、更新、删除等操作</p>
+                    <p>SQL查询：可通过SQL（JDBC Template查询）实现查询或新增、更新、删除等操作</p>
+                    <p>视图查询：可通过调用视图查询数据</p>
+                    <p>存储过程：可通过封装好的方法调用存储过程，实现数据库的强大数据处理功能</p>
+                    <p>RESTful风格：URL地址可采用RESTful风格</p>
+                    <p>报表导出：通过调用接口，导出Word、Excel、Pdf报表</p>
+                    <p>权限控制：基于RBAC的权限控制系统</p>
+                    <p>日志记录：记录所有用户操作信息，包括请求地址、传递参数，耗时、IP地址等信息</p>
+                    <p>异常记录：记录系统运行过程中的异常报错信息，及时主动发现问题，修复系统BUG</p>
+                    <p>代码生成：通过代码生成器一键自动生成Controller、Service层的通用增删改查代码</p>
+                    <p>Json输出：统一Json格式数据输出，一套后端程序同时实现网页端、移动APP端的数据调用</p>
+                    <p>数据过滤：每个表格界面，自带数据过滤功能，可同时过滤多个字段完成过滤查询</p>
+                    <p>自定义查询：每个表格界面，通过自定义查询条件，实现可自由组合的数据查询</p>
+                    <p>数据排序：可结合数据过滤或自定义组合查询，实现单个字段或多个字段组合排序</p>
                 </div>
             </div>
         </div>
