--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -102,6 +102,8 @@
                     <p>数据过滤：每个表格界面，自带数据过滤功能，可同时过滤多个字段完成过滤查询</p>
                     <p>自定义查询：每个表格界面，通过自定义查询条件，实现可自由组合的数据查询</p>
                     <p>数据排序：可结合数据过滤或自定义组合查询，实现单个字段或多个字段组合排序</p>
+                    <p>基础配置：可自定义增加配置信息，在系统任何地方实现调用</p>
+                    <p>数据字典：自定义系统中的数据字典信息，通过接口在系统各处自由调用</p>
                 </div>
             </div>
         </div>
