--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -92,7 +92,7 @@
                     <h3 class="text-center">TopJUI与后端整合</h3>
                 </div>
                 <div class="panel-body">
-                    <h3><i class="fa fa-info-circle"></i> 关于开发平台</h3>
+                    <h3 class="text-danger"><i class="fa fa-info-circle"></i> 关于开发平台</h3>
                     <p style="text-indent: 2em;line-height: 2em">
                         通过十年的企业级信息系统开发经验积累总结与沉淀，我们根据客户的通用需求及软件开发中遇到的一些问题，成功开发了TopJUI前端框架，
                         在满足客户需求的同时，大大提高了前端开发的工作效率，同时根据TopJUI框架的特性，
@@ -105,24 +105,43 @@
                         ，用户名/密码：topjui / topjui
                     </p>
 
-                    <h3><i class="fa fa-info-circle"></i> 开发平台部分功能</h3>
+                    <h3 class="text-danger"><i class="fa fa-info-circle"></i> 开发平台通用功能</h3>
                     <p>多数据源连接：实现数据库分布式部署或集成已有信息系统的数据，实现系统整合</p>
                     <p>HQL查询：可通过HQL（Hibernate查询）实现查询或新增、更新、删除等操作</p>
                     <p>SQL查询：可通过SQL（JDBC Template查询）实现查询或新增、更新、删除等操作</p>
-                    <p>视图查询：可通过调用视图查询数据</p>
+                    <p>视图查询：可通过调用视图查询数据，实现表与表之间复杂的关联查询功能</p>
                     <p>存储过程：可通过封装好的方法调用存储过程，实现数据库的强大数据处理功能</p>
-                    <p>RESTful风格：URL地址可采用RESTful风格</p>
-                    <p>报表导出：通过调用接口，导出Word、Excel、Pdf报表</p>
-                    <p>权限控制：基于RBAC的权限控制系统</p>
-                    <p>日志记录：记录所有用户操作信息，包括请求地址、传递参数，耗时、IP地址等信息</p>
-                    <p>异常记录：记录系统运行过程中的异常报错信息，及时主动发现问题，修复系统BUG</p>
-                    <p>代码生成：通过代码生成器一键自动生成Controller、Service层的通用增删改查代码</p>
+                    <p>RESTful风格：在控制器中自由配置请求地址参数，实现URL地址的RESTful风格</p>
+                    <p>数据导出：封装通用的数据导出Excel功能，可导出每个表格界面中过滤查询数据</p>
+                    <p>报表导出：通过调用封装的导出接口，根据模板文件导出Word、Excel、Pdf报表</p>
                     <p>Json输出：统一Json格式数据输出，一套后端程序同时实现网页端、移动APP端的数据调用</p>
                     <p>数据过滤：每个表格界面，自带数据过滤功能，可同时过滤多个字段完成过滤查询</p>
                     <p>自定义查询：每个表格界面，通过自定义查询条件，实现可自由组合的数据查询</p>
                     <p>数据排序：可结合数据过滤或自定义组合查询，实现单个字段或多个字段组合排序</p>
-                    <p>基础配置：可自定义增加配置信息，在系统任何地方实现调用</p>
-                    <p>数据字典：自定义系统中的数据字典信息，通过接口在系统各处自由调用</p>
+                    <p>文字编辑器：整合百度的Ueditor编辑器，实现富文本的编辑，文章发布等</p>
+                    <p>文件上传：整合百度的webuploader插件，同时具有flash及Html5上传效果，轻松实现附件上传</p>
+
+                    <h3 class="text-danger"><i class="fa fa-info-circle"></i> 开发平台模块功能</h3>
+                    <p>栏目管理：设置文章发布的栏目信息，开发企业门户网站时可调用相关栏目</p>
+                    <p>文章管理：文章发布管理模块，所有文章类的信息可在此发布在不同的栏目中</p>
+                    <p>知识文档：文档管理模块，通用的附件上传功能附件数据也保存在此模块中</p>
+
+                    <p>组织架构：通过树形结构实现无限级的人员组织架构，包括设置各级负责人</p>
+                    <p>用户信息：系统用户基本信息，如需其它字段信息，可通过扩展表新增</p>
+                    <p>角色授权：基于RBAC的权限控制系统，可控制权限到所有页面、按钮及链接</p>
+                    <p>会员管理：会员管理模块，可通过前台会员注册或后台手动录入会员信息</p>
+
+                    <p>基础配置：可自定义增加调整系统配置信息，在系统任何界面都可实现调用</p>
+                    <p>系统菜单：系统后台的所有菜单，均在此模块进行配置，通过授权后显示在左侧导航中</p>
+                    <p>代码生成：通过代码生成器一键自动生成Controller、Service层的通用增删改查代码</p>
+                    <p>指标体系：指标体系即数据字典信息，通过无限级分类，实现数据字典的信息调用</p>
+
+                    <p>日志记录：记录所有用户操作信息，包括请求地址、传递参数，耗时、IP地址等信息</p>
+                    <p>异常记录：记录系统运行过程中的异常报错信息，及时主动发现问题，修复系统BUG</p>
+
+
+
+
                 </div>
             </div>
         </div>
