--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" type="text/css" href="../../topjui/plugins/bootstrap/css/bootstrap.min.css">
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <style>
+        body {
+            font: 12px/normal "microsoft yahei", "Times New Roman", "宋体", Times, serif;
+            letter-spacing: 1px;
+        }
+    </style>
 </head>
 
 <body>
@@ -97,7 +103,8 @@
                         通过十年的企业级信息系统开发经验积累总结与沉淀，我们根据客户的通用需求及软件开发中遇到的一些问题，成功开发了TopJUI前端框架，
                         在满足客户需求的同时，大大提高了前端开发的工作效率，同时根据TopJUI框架的特性，
                         结合后端JAVA开发框架（Spring + Spring MVC + Hibernate）及第三方插件整合，
-                        成功研发了适用于企业管理的信息化系统开发平台“易网时代企业管理信息系统开发平台”（以下简称“开发平台”）。
+                        成功研发了适用于企业管理的信息化系统开发平台“易网时代企业管理信息系统开发平台”（以下简称“开发平台”），通过此开发平台，
+                        我们实现了企业管理信息系统的快速开发，目前已应用在多个企业的信息管理系统中，在一个平台下，实现数十个子系统，几百个子模块同时运行。
                     </p>
                     <p style="text-indent: 2em;line-height: 2em">
                         开发平台演示地址：
@@ -118,8 +125,9 @@
                     <p>数据过滤：每个表格界面，自带数据过滤功能，可同时过滤多个字段完成过滤查询</p>
                     <p>自定义查询：每个表格界面，通过自定义查询条件，实现可自由组合的数据查询</p>
                     <p>数据排序：可结合数据过滤或自定义组合查询，实现单个字段或多个字段组合排序</p>
-                    <p>文字编辑器：整合百度的Ueditor编辑器，实现富文本的编辑，文章发布等</p>
                     <p>文件上传：整合百度的webuploader插件，同时具有flash及Html5上传效果，轻松实现附件上传</p>
+                    <p>图形报表：整合百度的echarts插件，可实现如柱状图、拆线图、饼图等图形报表生成</p>
+                    <p>文字编辑器：整合百度的Ueditor编辑器，实现富文本的编辑，文章发布等</p>
 
                     <h3 class="text-danger"><i class="fa fa-info-circle"></i> 开发平台模块功能</h3>
                     <p>栏目管理：设置文章发布的栏目信息，开发企业门户网站时可调用相关栏目</p>
@@ -138,10 +146,6 @@
 
                     <p>日志记录：记录所有用户操作信息，包括请求地址、传递参数，耗时、IP地址等信息</p>
                     <p>异常记录：记录系统运行过程中的异常报错信息，及时主动发现问题，修复系统BUG</p>
-
-
-
-
                 </div>
             </div>
         </div>
