--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -100,12 +100,12 @@
                 <div class="panel-body">
                     <h3 class="text-danger"><i class="fa fa-info-circle"></i> 关于开发平台</h3>
                     <p style="text-indent: 2em;line-height: 2em">
-                        通过十年的企业级信息系统开发经验积累总结与沉淀，我们根据客户的通用需求及软件开发中遇到的一些问题，成功开发了TopJUI前端框架，
-                        在满足客户需求的同时，大大提高了前端开发的工作效率，同时根据TopJUI框架的特性，
-                        结合后端JAVA开发框架（Spring + Spring MVC + Hibernate）及第三方插件整合，
-                        成功研发了适用于企业管理的信息化系统开发平台“易网时代企业管理信息系统开发平台”（以下简称“开发平台”），通过此开发平台，
-                        我们实现了企业管理信息系统的快速开发，目前已应用在多个企业的信息管理系统中，在一个平台下，实现数十个子系统，几百个子模块同时运行。
-                    </p>
+                        通过十年的企业级信息系统开发经验积累总结与沉淀，我们根据客户的通用需求及软件开发中遇到的问题，开发了TopJUI前端框架，
+                        在满足客户需求的同时，大大提高了前端开发的工作效率。我们根据TopJUI框架的特性，
+                        整合后端JAVA开发框架（Spring + Spring MVC + Hibernate）及第三方JAVA组件，
+                        研发了适用于企业管理的信息化系统开发平台“易网时代企业管理信息系统开发平台”（以下简称“开发平台”），通过此开发平台，
+                        我们实现了企业管理信息系统的快速开发，目前已应用在多个企业的信息管理系统中，提供了在一个平台下支撑数十个子系统，
+                        几百个子模块同时运行的企业级信息管理系统解决方案。
                     <p style="text-indent: 2em;line-height: 2em">
                         开发平台演示地址：
                         <a href="http://demo.topjui.com/system/index/index" target="_blank">http://demo.topjui.com/system/index/index</a>
@@ -113,7 +113,7 @@
                     </p>
 
                     <h3 class="text-danger"><i class="fa fa-info-circle"></i> 开发平台通用功能</h3>
-                    <p>多数据源连接：实现数据库分布式部署或集成已有信息系统的数据，实现系统整合</p>
+                    <p>多数据源：实现数据库分布式部署或集成已有信息系统的数据，实现系统整合</p>
                     <p>HQL查询：可通过HQL（Hibernate查询）实现查询或新增、更新、删除等操作</p>
                     <p>SQL查询：可通过SQL（JDBC Template查询）实现查询或新增、更新、删除等操作</p>
                     <p>视图查询：可通过调用视图查询数据，实现表与表之间复杂的关联查询功能</p>
