--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -31,8 +31,8 @@
                     <h3 class="text-center" style="font-weight: bold">关于本演示系统</h3>
                     <p style="text-indent: 2em;line-height: 2em;">
                         本演示系统只作为TopJUI前端框架静态演示之用，部分功能在静态页面上不便实现，
-                        与后端整合项目详见右边。本演示系统左侧菜单的“系统管理平台”仅作为的菜单示例，里面的操作无法使用，暂时也不会更新该部分功能。
-                        因时间关系，该演示系统只有部分组件可供演示，后续会进一步完善，请关注TopJUI项目GIT，目前该演示系统已更新的可供演示的功能组件如下：</p>
+                        与后端整合项目详见右侧介绍。本演示系统左侧菜单的“系统管理平台”仅作为的菜单示例，里面的操作无法使用，暂时也不会更新该部分功能。
+                        因时间关系，该演示系统暂时只有部分组件可供演示，后续会进一步完善，请关注TopJUI项目GIT，目前该演示系统已更新的可供演示的功能组件如下：</p>
                     <p>表格组件：普通表格、树形表格、可编辑表格（双击行编辑）</p>
                     <br>
                     <h3 class="text-danger text-center" style="font-weight: bold">TopJUI前端框架</h3>
@@ -125,6 +125,14 @@
                     <p>数据过滤：每个表格界面，自带数据过滤功能，可同时过滤多个字段完成过滤查询</p>
                     <p>自定义查询：每个表格界面，通过自定义查询条件，实现可自由组合的数据查询</p>
                     <p>数据排序：可结合数据过滤或自定义组合查询，实现单个字段或多个字段组合排序</p>
+
+                    <p>主子表关联：在子表中新增数据时，提示先选中主表数据，点击主表数据过滤子表数据</p>
+                    <p>按需加载：只有点击子表所在的Tab页时才加载子表或子页面的信息，按需加载提高效率</p>
+                    <p>查找带回：查询勾选某行数据，将与该数据行相关的信息回填到当前表单的其它输入框中</p>
+                    <p>自动完成：类似百度的搜索功能，输入关键字后自动过滤显示相关的信息，如查找人员</p>
+                    <p>多级联动：根据前一个下拉框选择的内容，动态关联下一个下拉框中的内容，如省市县关联</p>
+                    <p>批量处理：实现表格数据的批量提交，如批量审批通过，批量修改部分字段信息等</p>
+                    <p>可编辑表格：在可编辑表格中双击行实现编辑，通过ajax请求与后台同步提交修改</p>
                     <p>文件上传：整合百度的webuploader插件，同时具有flash及Html5上传效果，轻松实现附件上传</p>
                     <p>图形报表：整合百度的echarts插件，可实现如柱状图、拆线图、饼图等图形报表生成</p>
                     <p>文字编辑器：整合百度的Ueditor编辑器，实现富文本的编辑，文章发布等</p>
