--- a/demo/index.html
+++ b/demo/index.html
@@ -6,30 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
     <!-- 浏览器标签图片 -->
-    <link rel="shortcut icon" href="/topjui/image/favicon.ico"/>
+    <link rel="shortcut icon" href="topjui/image/favicon.ico"/>
     <!-- EasyUI样式 -->
-    <link type="text/css" rel="stylesheet" id="easyuiTheme" href="/topjui/themes/default/easyui.css">
+    <link type="text/css" rel="stylesheet" id="easyuiTheme" href="topjui/themes/default/easyui.css">
     <!-- TopJUI样式 -->
-    <link type="text/css" rel="stylesheet" href="/topjui/css/topjui.all.min.css">
+    <link type="text/css" rel="stylesheet" href="topjui/css/topjui.all.min.css">
     <!-- TopJUI配置 -->
-    <script type="text/javascript" src="/topjui/js/topjui.config.js"></script>
+    <script type="text/javascript" src="topjui/js/topjui.config.js"></script>
     <!-- jQuery核心 -->
-    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.cookie.js"></script>
+    <script type="text/javascript" src="topjui/plugins/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- EasyUI核心 -->
-    <script type="text/javascript" src="/topjui/plugins/easyui/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
+    <script type="text/javascript" src="topjui/plugins/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- TopJUI框架 -->
-    <script type="text/javascript" src="/topjui/js/topjui.all.js"></script>
+    <script type="text/javascript" src="topjui/js/topjui.all.js"></script>
     <!-- 首页js -->
-    <script type="text/javascript" src="/topjui/js/topjui.index.js" charset="utf-8"></script>
+    <script type="text/javascript" src="topjui/js/topjui.index.js" charset="utf-8"></script>
     <title>TopJUI前端框架</title>
 </head>
 
 <body>
 <div id="loading"
      style="position: fixed;top: -50%;left: -50%;width: 200%;height: 200%;background: #fff;z-index: 100;overflow: hidden;">
-    <img src="/topjui/image/ajax-loader.gif"
+    <img src="./topjui/image/ajax-loader.gif"
          style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;margin: auto;"/>
 </div>
 
