--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -46,7 +46,8 @@
                     <p>GIT下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
                     </p>
                     <p>官方网站：<a href="http://www.topjui.com" target="_blank">http://www.topjui.com</a></p>
-                    <p>演示站点：<a href="http://demo.topjui.com/system/index/index" target="_blank">http://demo.topjui.com/system/index/index</a>
+                    <p>演示站点：<a href="http://demo.topjui.com/demo/index.html" target="_blank">http://demo.topjui.com/demo/index.html</a></p>
+                    <p>整合项目：<a href="http://demo.topjui.com/system/index/index" target="_blank">http://demo.topjui.com/system/index/index</a>
                     </p>
                     <p>用户名 / 密码：topjui / topjui</p>
                     <p>QQ交流群：593783047，如有问题或建议欢迎反馈！</p>
