--- a/demo/html/form/input_index.html
+++ b/demo/html/form/input_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-<table data-toggle="topjui-datagrid" 
-    data-options="id:'productDg',
+<table data-toggle="topjui-datagrid"
+       data-options="id:'productDg',
     url:'../../json/goodslist.json'">
     <thead>
-        <tr>
-            <th data-options="field:'id',title:'ID',checkbox:true"></th>
-            <th data-options="field:'name',title:'商品名称'"></th>
-            <th data-options="field:'code',title:'商品编号'"></th>
-            <th data-options="field:'spec',title:'规格型号'"></th>
-            <th data-options="field:'danwei',title:'规格型号'"></th>
-            <th data-options="field:'sale_price',title:'销售单价'"></th>
-        </tr>
+    <tr>
+        <th data-options="field:'id',title:'ID',checkbox:true"></th>
+        <th data-options="field:'name',title:'商品名称'"></th>
+        <th data-options="field:'code',title:'商品编号'"></th>
+        <th data-options="field:'spec',title:'规格型号'"></th>
+        <th data-options="field:'danwei',title:'规格型号'"></th>
+        <th data-options="field:'sale_price',title:'销售单价'"></th>
+    </tr>
     </thead>
 </table>
 
@@ -46,4 +46,9 @@
 </div>
 
 </body>
+<script>
+    setTimeout(function () {
+        $.messager.alert('操作提示','请点击表格左上角的“文本输入演示”按钮');
+    }, 1500);
+</script>
 </html>
