--- a/demo/html/form/combogrid_index.html
+++ b/demo/html/form/combogrid_index.html
@@ -46,4 +46,9 @@
 </div>
 
 </body>
+<script>
+    setTimeout(function () {
+        $.messager.alert('操作提示','请点击表格左上角的“自动完成演示”按钮');
+    }, 1500);
+</script>
 </html>
