--- a/demo/html/form/datebox_index.html
+++ b/demo/html/form/datebox_index.html
@@ -46,4 +46,9 @@
 </div>
 
 </body>
+<script>
+    setTimeout(function () {
+        $.messager.alert('操作提示','请点击表格左上角的“日期选择演示”按钮');
+    }, 1500);
+</script>
 </html>
